--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -16,7 +16,7 @@
 （……もうこんな時間か）
 　希海はスボンのポケットから取り出した百円ライターでタバコに火を点ける。目を泳がせると時計の文字盤が見えた。壁に掛かった安物のアナログ式時計。その針は、あと少しで深夜0時に差し掛かろうかというところだった。
 （帰りどうしよう。ていうかここドコなんだろ……）
-　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。中央環状線から北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
+　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>(</rp><rt>ちゅうかん</rt><rp>)</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
 （暮葉洞のあたりなのかな……）
 　どことも知れぬ場所の研究施設。だが、ひとつだけ希海が知っていることがある。
 　<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby><ruby>有限公司<rp>(</rp><rt>Co.Ltd.</rt><rp>)</rp></ruby>。
@@ -54,24 +54,24 @@
 「いちおう……」
 　実際に学籍は存在するのだから、一応も何もれっきとした学生である。だが、もう長いこと学校に行ってない人間が大学生を名乗ることに、希海は何だか後ろめたいものを感じてしまい、かといって「不登校の引きこもりです」と正直に言うわけにもいかず、これらの葛藤が一応という言葉に表れている。
 「なるほど。大学では何を勉強しているのかな」
-「お、<ruby>精神理学<rp>(</rp><rt>オルゴノミー</rt><rp>)</rp></ruby>を…………」
+「お、<ruby>精神科学<rp>(</rp><rt>オルゴノロジー</rt><rp>)</rp></ruby>を…………」
 「ほう」
 　希海の表情が少しだけ引きつった。だが、対する男――東は興味津々といった感じで目を輝かせる。
-「なるほど。<ruby>近畿直轄市<rp>(</rp><rt>こ　の　あ　た　り</rt><rp>)</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神理学<rp>(</rp><rt>オルゴノミー</rt><rp>)</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
+「なるほど。<ruby>近畿直轄市<rp>(</rp><rt>こ　の　あ　た　り</rt><rp>)</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神科学<rp>(</rp><rt>オルゴノロジー</rt><rp>)</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
 「そんなことより、あ、あの子の話をですね！」
 「おっといかんいかん。私の悪い癖でね。いつも話を脱線させてしまうんだ。ええっと何の話だっけな……」
 　知るか。お前が何か言いかけたんだろう。何もないテーブルの上を見つめながら希海は心中で毒づく。
 「そうだそうだ。まずは君が彼女について知っている話を聞かせてもらいたいと思ったんだ。君の持っている情報を把握すれば、こちらも話がしやすくなるだろう？」
 　東は完全に打ち解けてしまったという様子で笑顔を見せる。だが一方の希海はその軽薄さに不信感を募らせるばかりだ。
-「え、えっと……。ここの会社のヒューマノイドで、記憶喪失っぽい感じになってて、廃棄されて逃げ出してきたみたいってことくらいです。私があの子について知ってるのは」
+「え、えっと……。ここの会社のアンドロイドで、記憶喪失っぽい感じになってて、廃棄されて逃げ出してきたみたいってことくらいです。私があの子について知ってるのは」
 　なんとも頭の悪そうなセリフだと希海は思った。「記憶喪失っぽい感じ」など、まるで女子高生の言い草である。ほかにいくらでもあるだろうに、よりにもよってこんな言い回しを選んでしまうなんて。クールに振る舞えない自分が嫌になる。
 「ふむ……」
 　東は小さく頷き、何かを考える様子で右手を顎に当てる。どういう順番で話をすべきか考えているのだろう。
 「なるほど。じゃあまず君の挙げた三点について、こちらから補足をしておこう。まず一つ目」
 　そう言って東は人差し指をぴんと立てる。
-「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのヒューマノイドは盗難対策の一環として<ruby>全球定位系統<rp>(</rp><rt>GPS</rt><rp>)</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
+「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>(</rp><rt>GPS</rt><rp>)</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
 　やはりGPSか。希海の想像していた通りである。女の子と会ってから、ものの1時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
-「次に二つ目。記憶の欠損と意識障害について。一般的なヒューマノイドの頭脳には<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>(</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>)</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して神経ネット内で大規模な<ruby>量子もつれ<rp>(</rp><rt>エンタングルメント</rt><rp>)</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>(</rp><rt>コヒーレンス</rt><rp>)</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>(</rp><rt>デコヒーレンス</rt><rp>)</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
+「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>(</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>)</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>(</rp><rt>ニューラル</rt><rp>)</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>(</rp><rt>エンタングルメント</rt><rp>)</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>(</rp><rt>コヒーレンス</rt><rp>)</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>(</rp><rt>デコヒーレンス</rt><rp>)</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
 　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
 「少し専門的になってしまったが、大丈夫かな？」
 　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
@@ -82,7 +82,7 @@
 「それについてだが……治ったとも言えるし、治っていないとも言える」
 　軽い気持ちで投げかけた質問の答えは予想外のものだった。希海の顔が思わず曇る。それまでの東の口ぶりには楽天的な色が漂っていたし、表情にも別段暗いものは見られなかったから油断をしていた。
 「ああ、勘違いしないでくれ。彼女の意識はちゃんと戻ったし、活動維持に必要な部位にも目立った損傷は見られなかった。きちんと定期的にメンテを受けるようにすれば、これからも問題なく動作させることができるよ。だが消えてしまった記憶だけは修復のしようがないんだ。そういう意味では完治とは言えない、ということだよ」
-　確かに高々数年間の記憶である。しかもヒューマノイドの記憶など、大部分が寝て起きて仕事をして、の繰り返しだ。彼女には、思い出すたびに胸が締め付けられるような挫折も、学校帰りに好きな人と一緒に見た夕焼けの記憶も、駆けっこで一番になった思い出もないのだろう。あと数日遅ければそのまま壊れてしまていたかもしれないことを考えれば、後遺症が残らなかっただけ御の字だと思う。
+　確かに高々数年間の記憶である。しかもアンドロイドの記憶など、大部分が寝て起きて仕事をして、の繰り返しだ。彼女には、思い出すたびに胸が締め付けられるような挫折も、学校帰りに好きな人と一緒に見た夕焼けの記憶も、駆けっこで一番になった思い出もないのだろう。あと数日遅ければそのまま壊れてしまていたかもしれないことを考えれば、後遺症が残らなかっただけ御の字だと思う。
 ――私は、それでも構いません
 　だが、あのときの彼女の言葉が、
 ――私が何者だったのか、私が今まで何をしてきたのか
@@ -102,18 +102,18 @@
 「彼女がかつての主人からもらった名前だ」
 
 　ハルカが出荷されたのは、今からもう2年も前になる。
-　購入者は<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンに住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がヒューマノイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
-　どうしてそんなことまで東が知っているのかというと、ヒューマノイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
-　ヒューマノイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがヒューマノイドを正しく利用するのかという点の見極めだ。
-　よく知られている通り、ヒューマノイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、ヒューマノイドを使って良からぬことを企む輩も当然、少なからず出てくる。
-　代表的な例が、ヒューマノイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、ヒューマノイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。SDRはこのような行為を「ヒューマノイドに対する反倫理的行為」として事細かに定めており、オーナーは契約締結時に倫理規定を順守する旨の誓約書を提出しなければならない。
+　購入者は<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンに住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
+　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
+　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
+　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
+　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。SDRはこのような行為を「アンドロイドに対する反倫理的行為」として事細かに定めており、オーナーは契約締結時に倫理規定を順守する旨の誓約書を提出しなければならない。
 　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「この人達なら大丈夫」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
 　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
 　自殺だった。
 　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは1ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
-　東もSDRの関係者として現場の写真を見せてもらったのだが、あの光景はおそらく一生忘れることがないだろう。腐敗した遺体に寄り添って、あどけない顔のヒューマノイドが事切れていたのだ。
-　良く知った顔だった。主人が忙しいからとひとりでメンテナンスにやってきては、今日はどんな料理を作っただの、どんな話をしただの、楽しそうに話していたあのヒューマノイド。彼女や彼女の同型機が幼いのはまだ精神が発達段階であるためで、いわば仕様とも言えるのだが、そのこと差し引いてもハルカはまるで小さな子供のようだった。子供のように一日一日を大切に生きていたと東は思う。
-　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、ヒューマノイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
+　東もSDRの関係者として現場の写真を見せてもらったのだが、あの光景はおそらく一生忘れることがないだろう。腐敗した遺体に寄り添って、あどけない顔のアンドロイドが事切れていたのだ。
+　良く知った顔だった。主人が忙しいからとひとりでメンテナンスにやってきては、今日はどんな料理を作っただの、どんな話をしただの、楽しそうに話していたあのアンドロイド。彼女や彼女の同型機が幼いのはまだ精神が発達段階であるためで、いわば仕様とも言えるのだが、そのこと差し引いてもハルカはまるで小さな子供のようだった。子供のように一日一日を大切に生きていたと東は思う。
+　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、アンドロイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
 　人工チューブラルが形作る大規模ニューラルネットはあまりにも複雑だ。あの表情を再現する出力信号は容易に作り出せるのかもしれないが、その背後にある心理作用を厳密に解析することは不可能に近い。
 　だからあの日、ハルカが何を考え、何を感じていたのかは、もはや誰にも分かりはしない。分かりはしないが、想像し、祈ることくらいはできるだろう。
 ――願わくば彼女が安らかな心持ちで眠りにつきしことを。
