--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css" type="text/css">
   <title>真揺中心</title>
+  <link rel="shortcut icon" href="icon.png" type="image/png">
 </head>
 
 <body>
