--- a/picture/fm05.html
+++ b/picture/fm05.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
   <title>fm05</title>
-  <link rel="shortcut icon" href="img/icon.png" type="image/png">
+  <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
 <body>
