--- a/hardproblem/3-04.html
+++ b/hardproblem/3-04.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
   <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
+  <link rel="stylesheet" type="text/css" href="../vendor/sim2ruby.css" />
 </head>
 <body id="page">
   <div v-component="hpot-page-header"></div>
