--- a/hardproblem/template.html
+++ b/hardproblem/template.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="portrait.css" />
   <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
+  <link rel="stylesheet" type="text/css" href="../vendor/sim2ruby.css" />
 </head>
 <body id="page">
   <div v-component="hpot-page-header"></div>
