--- a/link.html
+++ b/link.html
@@ -29,7 +29,10 @@
       </tr>
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://amekura10.tumblr.com/" target="_blank"><span class="pbanner">全年齢向け文章置き場</span></a></td>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
+　　　　　</tr>
+      <tr>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
 　　　　　</tr>
     </tbody>
@@ -52,6 +55,17 @@
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇ／pixiv</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="link_category">音楽</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="http://www.naveuna.jp/" target="_blank"><img src="banner/navebn.png"></a></td>
+        <td class="nobanner"><a href="http://kiiichi.blog.shinobi.jp/" target="_blank"><span class="pbanner">制作メモ</span></a></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
@@ -89,9 +103,6 @@
       <tr>
         <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
         <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
-        <td class="nobanner"><a href="http://kiiichi.blog.shinobi.jp/" target="_blank"><span class="pbanner">制作メモ</span></a></td>
-      </tr>
-      <tr>
         <td class="nobanner"><a href="http://kiiiichi.sakura.ne.jp/yoake.html" target="_blank"><span class="pbanner">夜明けの口笛吹き</span></a></td>
       </tr>
     </tbody>
