--- a/hardproblem/5-02.html
+++ b/hardproblem/5-02.html
@@ -17,32 +17,32 @@
 『何でそんなやる気ないの？　お前の研究でしょ？』
 　希海がつい今しがた先輩に言われたセリフである。
 　そう言いたくなる気持ちは分からないでもない。確かに元からやる気のかけらもない人間だったし、その上真面目に研究をしたところで単位は出してもらえないという教授のお墨付きだ。そんな状況でモチベーションを上げろという方が無理があると思うのだが、まあ事実は事実である。
-　だが分からないことを自分で調べろと言われ、『調べ方が分からない』と再度問うた後のセリフとしてこれはどうかと希海は思う。何を調べたらいいのかも分からない状況で『分からないなら調べろ』と言われても、右も左も分からない自分は途方に暮れるだけである。
+　だが分からないことを自分で調べろと言われ、『調べ方が分からない』と反論した後のセリフとしてこれはどうかと希海は思う。何を調べたらいいのかも分からない状況で『分からないなら調べろ』と言われても、右も左も分からない自分は途方に暮れるだけである。
 （……もう知るか）
 　舌打ちをして、パソコンの電源を落とした。調べ物は一向に解決していない。椅子に座ったまま大きく伸びをして時計を見れると、短針は13時を少し回ったあたりを指していた。どうりで腹が減るわけだ。最近はずっと朝を抜いてばっかりなので、昼を回った頃にはいつも強い空腹を覚える。
 （仕方ない……）
-　どうせこんな作業を続けても効率が悪いだ。一旦学食にでも行こう。希海はそう考えると鞄から財布だけを引っ張り出し、乱暴にケツポケットへ突っ込んで学生部屋を出た。
+　どうせこんな作業を続けても効率が悪いだけだ。一旦学食にでも行こう。希海はそう考えると鞄から財布だけを引っ張り出し、乱暴にケツポケットへ突っ込んで学生部屋を出た。
 　扉を開けると、無機質な白い廊下の向こうから談笑する声がこちらへ向かってくる。声の主は複数名。男が三人に女が一人。同じ研究室の人間たちだった。希海はポケットから携帯端末を取り出すと、それをわざとらしくいじりながら彼らとすれ違う。メールボックスを開き新着問い合わせのボタンを押すと、処理中を示す小さな円がくるくると画面上で回転をはじめた。もちろんメールのチェックなどしてみたところでスパム以外の何も来ていないであろうことは容易に想像がつく。だがそんな無意味な行動とて彼らと目を合わさずにすれ違うだけの時間を稼いでくれるのには十分だった。
 　……のだが。
 「あっ、青山さんも今からご飯？」
-　集団の中の一人が話しかけてきた。どこか脳天気とも思える明るい声色の主は見覚えのある女子学生、いつか海でばったりと出くわしてしまった竹見さんである。
+　集団の中の一人が話しかけてきた。どこか脳天気とも思える明るい声色の主は見覚えのある女子学生。いつか海でばったりと出くわしてしまった竹見さんである。
 「えっ……えっと……う、うん。まあお腹空いたし」
 「そうなんだ最近、頑張ってるもんね。いってらっしゃい」
-　竹見さんはそう告げると、またすぐに踵を返して集団と共に歩き出す。大学に連れ戻されてから今日で一週間と少し。いつも居心地の悪さを感じていた希海を気遣ってか、竹見さんはこうして何度か希海に話しかけてくれることがあった。
-　今回の一件もそんな今までに何度かあったシーンの再現である。こうして何事もなかったかのように接してもらえると希海も少しだけ、ほんの少しだけ救われた気分になれる。だがその一方で周りの人間の嘲笑と哀れみが混じった視線も、希海はしっかりと感じ取っている。さっきだって、竹見さんを待つ面々のさぞ面倒くさそうな顔を視界の端に捉えてしまった。
+　竹見さんはそう告げると、またすぐに踵を返して集団と共に歩き出す。大学に連れ戻されてから今日で数日。いつも居心地の悪さを感じていた希海を気遣ってか、竹見さんはこうして何度か希海に話しかけてくれることがあった。
+　今回の一件も、そんな今までに何度かあったシーンの再現である。こうして何事もなかったかのように接してもらえると希海も少しだけ、ほんの少しだけ救われた気分になれる。だがその一方で周りの人間の嘲笑と哀れみが混じった視線も、希海はしっかりと感じ取っている。さっきだって、竹見さんを待つ面々のさぞ面倒くさそうな顔を視界の端に捉えてしまった。
 　彼らが学生部屋に入るのをぎこちなく見送り、溜息をつく。
 　いくら例外が存在していようが、それ以外の者からの扱いはやはり心地の良いものではない。自分の置かれた状況を考えればそれも当然なのだが、しばらくはこの冷たい視線の中で耐え忍ばねばならないことを考えると胃がキリキリと痛んだ。
-　薄暗い廊下を抜けて外にでると、冷たい冬の風が希海を出迎える。最寄りの学食まではここから徒歩で5分ほど。ポケットに手を入れ、肩をすくませながら足早に歩いていると目的の場所へはあっという間にたどり着いてしまう。
+　薄暗い廊下を抜けて外にでると、冷たい冬の風が希海を出迎える。最寄りの学食まではここから徒歩で五分ほど。ポケットに手を入れ、肩をすくませながら足早に歩いていると目的の場所へはあっという間にたどり着いてしまう。
 　購買部棟にある学生食堂『であばると』。
-　昼休みはいつも人でごった返しているのだが、13時を回って皆が講義に行ってしまう頃合いともなればその人ごみも幾分マシになる。希海は水色のトレイを手に取り、丼物コーナーで天津麻婆丼を注文して料金の支払いを済ませた。ティーサーバーで茶を汲み、ひと気のないテーブルを見繕って一番端の席に腰掛けさあ食べようというそのとき、
+　昼休みはいつも人でごった返しているのだが、昼の一時を回って皆が講義に行ってしまう頃合いともなればその人ごみも幾分マシになる。希海は水色のトレイを手に取り、丼物コーナーで天津麻婆丼を注文して料金の支払いを済ませた。ティーサーバーで茶を汲み、ひと気のないテーブルを見繕って一番端の席に腰掛けさあ食べようというそのとき、
 「だからさぁ！　あいつがそんなこと言うからダメなんでしょ！」
-　騒々しい騒ぎ声が隣で響く。ちらりと視線をそちらにやってみると、ジャージ姿の集団が希海の居たテーブルの一角に陣取ろうとしていた。紺色のジャージの後ろには『滨大手球部』の刺繍。運動部の集団がテーブルの一角を占拠すると、それまで静かだった周囲が途端にぎゃあぎゃあと騒がしくなる。またうるさい奴らが来た。そう思った希海はできるだけ手早く食事を口に運ぶことに決める。
+　騒々しい騒ぎ声が隣で響く。ちらりと視線をそちらにやってみると、ジャージ姿の集団が希海の居たテーブルの一角に陣取ろうとしていた。紺色のジャージの後ろには『<span class="simplified">滨大手球部</span>』の刺繍。運動部の集団がテーブルの一角を占拠すると、それまで静かだった周囲が途端にぎゃあぎゃあと騒がしくなる。またうるさい奴らが来た。そう思った希海はできるだけ手早く食事を口に運ぶことに決める。
 「うわっすげえ！　これ見ろよ！」
 　希海の隣に座った茶髪の学生がタブレット型端末を周りに示して見せた。
 「なにこれ？　ニュースサイト？」
 　きょとんとして聞き返したのは集団の中のまた別の一人、少し内気そうな短髪の学生。
 「お前、浜大ウォーカー知らねえのかよ。生協が運営してるウチの大学の情報サイト……ってそんなのどうでもいいんだって。それよりホラこれ」
-「『未来はもうすぐそこだ！　アンドロイド特集』……？　なんじゃそりゃ」
+「未来はもうすぐそこだ！　アンドロイド特集……？　なんじゃそりゃ」
 　先に話していた二人とはまた別の、高校球児を色気づかせたようなボウズ頭が話に割って入ってくる。
 「いや、俺もよく知らねーんだけどさ、最近、すげー増えてるらしいんだよアンドロイド。ウチの大学の工学部がなんかどっかの企業と共同してどーたらこーたら……みたいなことが書いてある」
 「何だお前、数学全然できねえくせして急にロボットの話かよ」
@@ -65,9 +65,9 @@
 「そうそう。あんな感じで誰からも認めてもらえないような悲しいヒトがこういうのに走るの」
 「だよなあ……。そうやって自分に自信がないからって機械に認めてもらおうっていう考えがそもそも卑屈だし、そんなんだから人間からも相手に――」
 　からん。
-　希海は箸を投げおくと、天津麻婆丼の最後の一口をお茶で強引に流し込み、気だるそうに席を立つ。トレイを返却口のコンベアに乗せ、食堂を出たところにある喫煙所でタバコを吹かして研究室に戻った。
-　その後30分ほど調べ物を再開して、実験室へ向かった。
-　今日の午後は博士課程3年(Ｄ３)の先輩と予備実験をすることになっている。その内容は「生体サンプルを有機結晶に付着させオルゴン場に曝露させておく」というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
+　希海はレンゲを投げおくと、天津麻婆丼の最後の一口をお茶で強引に流し込み、気だるそうに席を立つ。トレイを返却口のコンベアに乗せ、食堂を出たところにある喫煙所でタバコを吹かして研究室に戻った。
+　その後30分ほど調べ物を再開してから実験室へと出向く。
+　今日の午後は<ruby>博士課程三年<rp>(</rp><rt>D　　　　　3</rt><rp>)</rp></ruby>の先輩と予備実験をすることになっている。その内容は「生体サンプルを有機結晶に付着させオルゴン場に曝露させておく」というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分を消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
 　慣れない結晶の開裂作業をイライラしながら何度もやり直し、ようやく終わらせる。次は有機結晶の浄化だ。専用の薬品に浸しながら超音波洗浄機で15分かけて表面の微細な汚れを落とすのを3周行う……という作業なのだが、この15分という時間がまた嫌らしい。本格的に調べ物や論文の執筆に充てるには短いし、かと言って何もせずただ待つには長すぎる。タバコを吸いに行こうにも二年前には確かにあったはずの喫煙所はいつの間にか失くなってしまっていたし、そもそもこの寒空の下わざわざ建物の外へ出る気にはなれなかった。
 「…………」
 　そして希海は仕方なく学生部屋のデスクでラップトップを広げ、ネットの掲示板をチェックしていた。何をするでもなく何を考えるでもなく、ただ怠惰にモニタに映し出される文字の羅列を目で追いかける。
@@ -76,8 +76,8 @@
 『セイレーンクエスト、ギルドカード交換スレッド』
 『最高にかっこいい解放軍の画像を貼っていく』
 『親に金払ってもらいながら大学留年する奴はクズ』
-　あまり愉快でないスレッドが目に入り、希海はスクロールの速度を上げた。だが一度頭にこびりついてしまった呪いの言葉はなかなか消えてくれず、結局希海はブラウザを閉じてタバコを吸いに行くことにした。
-
+　あまり愉快でないスレッドが目に入り、希海はスクロールの速度を上げる。だが一度頭にこびりついてしまった呪いの言葉はなかなか消えてくれず、結局希海はブラウザを閉じてタバコを吸いに行くことにした。脱いでいたコートを手にとって羽織り、学生部屋の扉を開く。
+　ついた溜息が廊下の静寂にこだました。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
